Opened 15 years ago

Closed 13 years ago

#5586 closed bug (fixed)

[Tracker] some shortcuts doesn't work in file panel

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1
Component: Applications/Tracker Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

The following shortcuts doesn't work in file panel:
Select - Shift+Alt+A
Select all - Alt+A
Invert selection - Alt+S


Tested with hrev35885 in VirtualBox.

Attachments (2)

FilePanel.png (26.4 KB ) - added by diver 15 years ago.
0001-Fix-5586-Add-missing-shortcuts-to-FilePanel.patch (1.1 KB ) - added by diver 13 years ago.

Download all attachments as: .zip

Change History (4)

by diver, 15 years ago

Attachment: FilePanel.png added

comment:1 by diver, 13 years ago

patch: 01

comment:2 by humdinger, 13 years ago

Resolution: fixed
Status: newclosed

Applied with hrev44054. Thanks!

Note: See TracTickets for help on using tickets.