Fix #5586: Add missing shortcuts to FilePanel.